<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefs_animations" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="animations_enable"
            android:summary="@string/prefs_animations_enable_summary"
            android:title="@string/prefs_animations_enable" />
        <CheckBoxPreference
            android:dependency="animations_enable"
            android:defaultValue="true"
            android:key="animations_hue"
            android:summary="@string/prefs_animations_hue_summary"
            android:title="@string/prefs_animations_hue" />
        <CheckBoxPreference
            android:dependency="animations_enable"
            android:defaultValue="true"
            android:key="animations_particles"
            android:summary="@string/prefs_animations_particles_summary"
            android:title="@string/prefs_animations_particles" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_sensors" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="sensors_luminosity"
            android:summary="@string/prefs_sensors_luminosity_summary"
            android:title="@string/prefs_sensors_luminosity" />
    </PreferenceCategory>

</PreferenceScreen>