<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hearc.thereminoid.MainActivity" >

    <item
        android:id="@+id/action_record"
        android:icon="@drawable/record"
        android:showAsAction="always"
        android:title="@string/action_record"/>
	
    <item
        android:id="@+id/action_mute"
        android:icon="@drawable/ic_action_unmute"
        android:showAsAction="always"
        android:title="@string/action_mute"/>
    
    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_action_list"
        android:showAsAction="always"
        android:title="@string/action_list"/>
    
    <item
        android:id="@+id/action_wave_sin"
        android:icon="@drawable/ic_action_wave_sin"
        android:showAsAction="always"
        android:title="@string/action_wave_sin"/>
    
    <item
        android:id="@+id/action_wave_sqr"
        android:icon="@drawable/ic_action_wave_sqr"
        android:showAsAction="always"
        android:title="@string/action_wave_sqr"/>
    
    <item
        android:id="@+id/action_wave_saw"
        android:icon="@drawable/ic_action_wave_saw"
        android:showAsAction="always"
        android:title="@string/action_wave_saw"/>
</menu>